# git-test-framework

./: .coverage  .pre-commit-config.yaml  .testmondata  ChatGPT_Project_Building_Link.txt  pyproject.toml  requirement.txt  setup.cfg
.github/.github/workflows/: python-tests.yml
.github/workflows/: python-tests.yml
src/calculator/: calculator.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_calculator.py  test_exchange.py
