
[build-system]
# 'setuptools' builds your package; 'wheel' makes binary distributions.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator library for testing framework development."
authors = [
  { name = "Milad", email = "milad.mohammadzadehsharif@knightec.se" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Optional: runtime dependencies your library needs  
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
