
[build-system]
# 'setuptools' builds your package; 'wheel' makes binary distributions.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator library for testing framework development."
authors = [
  { name = "Milad", email = "milad.mohammadzadehsharif@knightec.se" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Optional: runtime dependencies your library needs  
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | build
  | dist
  | .git
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]
exclude = ["venv", "build", "dist"]
fix = true

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

